# uav_ftc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
cfg/: flight_envelope.cfg
data/faults/: aileron_0.json  aileron_50.json  aileron_only_right.json  elevator_0.json  elevator_50.json  motor_0.json  rudder_0.json  structural_large.json  structural_small.json
data/flight_envelopes/: default.json  default_70.json  default_mot_0.json  elev_0.json  nominal.json  nominal_mot_0.json  rud_0.json  slow_turn_right.json  test.json
data/parameters/: controller_params.yaml  data_bus.yaml  fe_generator.yaml  params.yaml  randomizer.yaml  rosflight_params.yaml  ublox.yaml
data/rostopic_pub_arguments/: raw_ctrls_throttle.txt
data/scenarios/: benchmark_1.json  benchmark_2.json  benchmark_3.json  benchmark_5.json  benchmark_6.json  benchmark_7.json  fault_1.json  fault_aileron_only_right.json  fault_structural_large.json  fault_structural_small.json  traj_1.json  traj_2.json  traj_3.json
include/: controller_no_ail.hpp  controller_no_elev.hpp  geodetic_conv.hpp  input_aggregator.hpp  mpc_wrapper.hpp  path_controller.hpp  path_controller_node.hpp  rate_controller.hpp  rate_controller_2.hpp  rate_controller_no_rud.hpp  rate_controller_pid.hpp  rate_controller_wrapper.hpp  reference_generator.hpp  trajectory_controller.hpp  trajectory_controller_2.hpp  trajectory_controller_no_rud.hpp  trajectory_controller_no_va.hpp
include/data_manipulators/: data_bus.hpp
include/uav_ftc/: plot_utils.py  trim_script.py  uav_model.py
launch/: controller.launch  data_collection.launch  data_sources.launch  flight_envelope.launch  gps.launch  last_letter_nodes.launch  launch.launch  launcher.launch  logger.launch  path_control.launch  rate_control.launch  rate_control_ail_elev_50.launch  simulation.launch  test_controller_stack.launch  test_data_bus.launch  test_flight_envelope.launch  test_online_estimator.launch  test_path_controller.launch  test_scenario.launch  trajectory_control.launch  trajectory_control_mot_0.launch
launch/benchmark_files/: sim01.launch  sim02.launch  sim03.launch  sim04.launch  sim05.launch  sim06.launch  sim07.launch  sim08.launch  sim09.launch  sim10.launch  sim11.launch  sim12.launch  sim13.launch  sim14.launch  sim15.launch  sim16.launch  sim17.launch  sim24.launch  sim25.launch  sim26.launch  sim27.launch  sim28.launch  sim29.launch  sim30.launch  sim31.launch  sim32.launch  sim33.launch  sim34.launch  sim35.launch  sim36.launch  sim38.launch  sim41.launch
logs/: log_parsing.py  pickle_data.py  plot_fe_and_trajectory.py  reset_bag_timestamps.py
logs/flight_envelope_va_gamma/: import_logs.sh  plot_script.py  points_no.csv  points_yes.csv  separators.csv  vertices.csv
logs/rate_controller_investigation/: cmds_to_run.sh
logs/trajectory_controller_investigation/: cmds_to_run.sh
mpc_models/: rate_controller_solver.cpp
mpc_models/rate_controller/: CMakeLists.txt  Makefile  build_controller.sh  rate_controller_solver.cpp
mpc_models/rate_controller/rate_controller_mpc_solver/: acado_problem_definitions.h  test.c
mpc_models/rate_controller/uav_ftc_codegen/: test.c
mpc_models/rate_controller_2/: CMakeLists.txt  rate_controller_solver_2.cpp
mpc_models/rate_controller_2/rate_controller_mpc_solver_2/: test.c
mpc_models/rate_controller_no_rud/: CMakeLists.txt  rate_controller_solver.cpp
mpc_models/trajectory_controller/: Makefile  derivations.py  trajectory_controller_solver.cpp
mpc_models/trajectory_controller/trajectory_controller_mpc_solver/: acado_problem_definitions.h  test.c
mpc_models/trajectory_controller_2/: CMakeLists.txt  build_controller.sh  trajectory_controller_solver_2.cpp
mpc_models/trajectory_controller_2/trajectory_controller_mpc_solver_2/: test.c
mpc_models/trajectory_controller_no_rud/: trajectory_controller_solver.cpp
mpc_models/trajectory_controller_no_rud/trajectory_controller_mpc_solver/: acado_problem_definitions.h
mpc_models/trajectory_controller_no_va/: CMakeLists.txt  trajectory_controller_solver.cpp
mpc_models/trajectory_controller_no_va/trajectory_controller_mpc_solver/: acado_problem_definitions.h
msg/: BusData.msg  FlightEnvelopeEllipsoid.msg  Parameter.msg
plotting_scripts/: artificial_fe.py  extract_fe_pictures.py  fe_2d_plot_script.py  generate_plots.py  plot_rates.py  trajectory_plot_script.py
scripts/: fe_publisher.py  flight_envelope_generator_ros.py  scenario_player.py
src/: controller_no_ail.cpp  controller_no_elev.cpp  ekf.cpp  input_aggregator.cpp  mpc_wrapper.cpp  path_controller.cpp  path_controller_node.cpp  rate_controller.cpp  rate_controller_2.cpp  rate_controller_no_rud.cpp  rate_controller_pid.cpp  rate_controller_wrapper.cpp  reference_generator.cpp  rosflight_publisher.cpp  trajectory_controller.cpp  trajectory_controller_2.cpp  trajectory_controller_no_rud.cpp  trajectory_controller_no_va.cpp
src/data_manipulators/: data_bus.cpp  data_from_hardware.cpp  data_from_last_letter.cpp
src/rps_controller/: rps_controller.ino
src/uav_ftc/: fault_generator.py  flight_envelope_generator_ros.py  generate_acado_constraints.py  generate_plots.py  log_parsing.py  plot_utils.py  polytope_utils.py  reset_bag_timestamps.py  scenario_player.py  test_continuous_fe.py  test_continuous_polytope.py  trim_script.py  trim_traj_fe.py  uav_model.py
utilities/: complexity_investigation.ods
